[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "issueflow-lite"
version = "0.1.0"
description = "A lightweight issue collaboration platform."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2",
    "fastapi>=0.115,<1",
    "jinja2>=3.1,<4",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
    "pytest-cov>=6,<7",
    "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*", "tests*"]
namespaces = false